added entities & context

--- a/Blog.API/Blog.API/appsettings.Development.json
+++ b/Blog.API/Blog.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=localhost\\sqlexpress;Initial Catalog=Blog;Integrated Security=True;Encrypt=False"
+    //"ConnectionString": "Server=localhost\\SQLEXPRESS;Database=Blog;MultipleActiveResultSets=true;Encrypt=False"
+    //"DefaultConnectionString": "server=localhost;user=root;database=blog;port=3306"
   }
 }
