--- a/Blog.API/Blog.API/appsettings.Development.json
+++ b/Blog.API/Blog.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=localhost\\sqlexpress;Initial Catalog=Blog;Integrated Security=True;Encrypt=False"
   }
 }
