--- a/Blog.API/Blog.Infrastructure/Blog.Infrastructure.csproj
+++ b/Blog.API/Blog.Infrastructure/Blog.Infrastructure.csproj
@@ -15,6 +15,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Mapster" Version="7.4.0"/>
+        <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12">
