--- a/Blog.API/Blog.API/Blog.API.csproj
+++ b/Blog.API/Blog.API/Blog.API.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="SpanJson" Version="4.0.1" />
+    <PackageReference Include="SpanJson.AspNetCore.Formatter" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
