--- a/Blog.API/Blog.API/appsettings.Development.json
+++ b/Blog.API/Blog.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Data Source=localhost\\sqlexpress;Initial Catalog=Blog;Integrated Security=True"
+    "Database": "Data Source=localhost\\sqlexpress;Initial Catalog=Blog;Integrated Security=True;Encrypt=False"
   }
 }
