Add Redis cache service

--- a/Blog.API/Blog.API/appsettings.Development.json
+++ b/Blog.API/Blog.API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Data Source=localhost\\sqlexpress;Initial Catalog=Blog;Integrated Security=True;Encrypt=False"
+    "Database": "Data Source=localhost\\sqlexpress;Initial Catalog=Blog;Integrated Security=True;Encrypt=False",
+    "RedisCache": "localhost:6379"
   }
 }
