--- a/Blog.API/Blog.Core/Blog.Core.csproj
+++ b/Blog.API/Blog.Core/Blog.Core.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
         <PackageReference Include="MediatR" Version="12.1.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.12"/>
+        <PackageReference Include="protobuf-net" Version="3.2.30" />
     </ItemGroup>
 
 
