--- a/Blog.API/Blog.API.Tests/Blog.API.Tests.csproj
+++ b/Blog.API/Blog.API.Tests/Blog.API.Tests.csproj
@@ -21,6 +21,8 @@
         <PackageReference Include="Bogus" Version="34.0.2"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0"/>
         <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="2.1.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
         <PackageReference Include="xunit" Version="2.6.2" />
